[tool.poetry]
name = "tibo-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Sergey Chudakov <csredrat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pyTelegramBotAPI = "^4.28.0"
Flask = "^3.0.0"
gunicorn = "^23.0.0"
requests = "^2.32.0"
Flask-Script = "^2.0.6"
nltk = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
